--- a/.github/workflows/sync_obsidian_to_repo.yml
+++ b/.github/workflows/sync_obsidian_to_repo.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Git
         run: |
           git config user.name "onurcangnc"
-          git config user.email "your-email@example.com"
+          git config user.email "onurcan.genc@ug.bilkent.edu.tr"
 
       # Get the latest Git tag (version) and bump it
       - name: Get latest tag and bump version
