--- a/.github/workflows/sync_obsidian_to_repo.yml
+++ b/.github/workflows/sync_obsidian_to_repo.yml
@@ -47,10 +47,23 @@ jobs:
           # Output the new version as an environment variable
           echo "::set-output name=version::$new_version"
 
-      # Add, commit, and push changes with the new version number
+      # Check if there are any changes to commit using git status --porcelain
+      - name: Check for changes
+        id: git_status
+        run: |
+          # Check if there are any changes to commit
+          if git status --porcelain | grep .; then
+            echo "::set-output name=has_changes::true"
+          else
+            echo "::set-output name=has_changes::false"
+          fi
+
+      # Add, commit, and push changes with the new version number, but only if there are changes
       - name: Commit and push changes
+        if: steps.git_status.outputs.has_changes == 'true'
         run: |
           git add .
           git commit -m "Add GitHub Actions workflow to sync notes ${{ steps.version_bump.outputs.version }}"
           git tag ${{ steps.version_bump.outputs.version }}
-          git push origin main --tags
+          git push origin main
+          git push origin --tags
