--- a/.github/workflows/convert_md_to_html.yml
+++ b/.github/workflows/convert_md_to_html.yml
@@ -1,4 +1,4 @@
-name: Convert Markdown to HTML if CTF Writeup Exists
+name: Convert Markdown to HTML
 
 on:
   push:
@@ -23,24 +23,27 @@ jobs:
         python -m pip install --upgrade pip
         pip install markdown2
 
-    - name: Convert CTF Writeup to HTML
+    - name: Convert All Markdown Files to HTML
       run: |
-        if [ -f "ctf_writeups.md" ]; then
-          python <<EOF
-          import markdown2
-          with open('ctf_writeups.md', 'r', encoding='utf-8') as f:
-              markdown_content = f.read()
-          html_content = markdown2.markdown(markdown_content)
-          with open('ctf_writeups.html', 'w', encoding='utf-8') as f:
-              f.write(html_content)
-          print('HTML dosyası başarıyla güncellendi.')
-          EOF
-        fi
+        for file in *.md; do
+          if [ -f "$file" ]; then
+            html_file="${file%.md}.html"
+            python <<EOF
+            import markdown2
+            with open('$file', 'r', encoding='utf-8') as f:
+                markdown_content = f.read()
+            html_content = markdown2.markdown(markdown_content)
+            with open('$html_file', 'w', encoding='utf-8') as f:
+                f.write(html_content)
+            print(f'{html_file} başarıyla güncellendi.')
+            EOF
+          fi
+        done
 
     - name: Commit and Push HTML changes
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
-        git add ctf_writeups.html
-        git commit -m "Update CTF writeup HTML file"
+        git add *.html
+        git commit -m "Update HTML files for CTF writeups"
         git push
