--- a/.github/workflows/convert_md_to_html.yml
+++ b/.github/workflows/convert_md_to_html.yml
@@ -33,6 +33,6 @@ jobs:
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
-        git add *.html
-        git commit -m "Update HTML files for CTF writeups"
+        git add TryHackMe/**/*.html
+        git commit -m "Update HTML files for TryHackMe"
         git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/onurcangnc/ctf_writeups.git
