--- a/.github/workflows/convert_md_to_html.yml
+++ b/.github/workflows/convert_md_to_html.yml
@@ -27,24 +27,28 @@ jobs:
       run: |
         python convert_md_to_html.py
 
-    - name: Commit and Push HTML changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Commit changes
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add TryHackMe/**/*.html
-
-        # Pull the latest changes before pushing
-        git pull --rebase
-
-        # Only commit and push if there are changes
+        
+        # Check if there are changes to commit
         if git diff --cached --quiet; then
           echo "No changes to commit"
         else
           git commit -m "Update HTML files for TryHackMe"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/onurcangnc/ctf_writeups.git
         fi
+
+    - name: Pull latest changes with rebase
+      run: |
+        git pull --rebase
+
+    - name: Push HTML changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/onurcangnc/ctf_writeups.git
 
     - name: Check if git pull is needed
       run: |
