--- a/.github/workflows/make_live_html.yml
+++ b/.github/workflows/make_live_html.yml
@@ -27,7 +27,7 @@ jobs:
         echo "        .container { max-width: 800px; padding: 20px; margin: 20px; background-color: #fff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border-radius: 8px; text-align: center; }" >> index.html
         echo "        h1 { color: #0367A6; font-size: 2.5em; margin-bottom: 20px; }" >> index.html
         echo "        ul { list-style-type: none; padding: 0; }" >> index.html
-        echo "        ul li { margin: 20px 0; }" >> index.html
+        echo "        ul li { margin: 15px 0; }" >> index.html
         echo "        a { font-size: 1.2em; text-decoration: none; color: #0367A6; padding: 10px 20px; border: 2px solid #0367A6; border-radius: 5px; transition: background-color 0.3s, color 0.3s; }" >> index.html
         echo "        a:hover { background-color: #0367A6; color: #fff; }" >> index.html
         echo "    </style>" >> index.html
@@ -35,23 +35,20 @@ jobs:
         echo "<body>" >> index.html
         echo "    <div class='container'>" >> index.html
         echo "        <h1>CTF Writeups</h1>" >> index.html
-        echo "        <p>Welcome to my collection of Capture The Flag (CTF) writeups. Click below to view detailed analysis and solutions for each challenge.</p>" >> index.html
         echo "        <ul>" >> index.html
 
         # Automatically detect directories with .html files and add links to the index
         for dir in */ ; do
-          if [ -f \"$dir/*.html\" ]; then
-            dir_name=$(basename \"$dir\")
-            html_file=$(find \"$dir\" -name '*.html' -print -quit)
-            html_filename=$(basename \"$html_file\")
-            echo "        <li><a href='$dir_name/$html_filename'>$dir_name Writeup</a></li>" >> index.html
+          if [ -f "$dir/*.html" ]; then
+            # Get the directory name and generate a link to its HTML file
+            dir_name=$(basename "$dir")
+            html_file=$(find "$dir" -name '*.html' -print -quit)
+            html_filename=$(basename "$html_file")
+            echo "        <li><a href='$dir_name/$html_filename'>$dir_name CTF Writeup</a></li>" >> index.html
           fi
         done
 
         echo "        </ul>" >> index.html
-        echo "        <footer>" >> index.html
-        echo "            <p>© 2024 Onurcan Genç. All rights reserved.</p>" >> index.html
-        echo "        </footer>" >> index.html
         echo "    </div>" >> index.html
         echo "</body>" >> index.html
         echo "</html>" >> index.html
