--- a/.github/workflows/make_live_html.yml
+++ b/.github/workflows/make_live_html.yml
@@ -42,7 +42,7 @@ jobs:
           if [ -n "$html_file" ]; then
             dir_name=$(basename "$dir")
             html_filename=$(basename "$html_file")
-            echo "        <li><a href='TryHackMe/$dir_name/$html_filename'>$dir_name CTF Writeup</a></li>" >> index.html
+            echo "        <li><a href='TryHackMe/$dir_name/$html_filename'>$dir_name Writeup</a></li>" >> index.html
           fi
         done
 
